--- a/MolFeatures/cube_sterimol.ipynb
+++ b/MolFeatures/cube_sterimol.ipynb
@@ -154,7 +154,7 @@
     "            front_ang=degree_list[np.where(b1s==min(b1s))[0][0]]+scans\n",
     "            degree_list=range(back_ang,front_ang+1)\n",
     "        except:\n",
-    "            print(np.where(np.isclose(b1s, min(b1s), atol=1e-8)))\n",
+    "            \n",
     "            back_ang=degree_list[np.where(np.isclose(b1s, min(b1s), atol=1e-8))[0][0]]-scans\n",
     "            front_ang=degree_list[np.where(np.isclose(b1s, min(b1s), atol=1e-8))[0][0]]+scans\n",
     "            degree_list=range(back_ang,front_ang+1)\n",
@@ -378,6 +378,7 @@
     "        self.base_atoms=base_atoms\n",
     "        self.xyz_from_cube()\n",
     "        self.process_cube_data()\n",
+    "        self.get_sterimol()\n",
     "        \n",
     "    def xyz_from_cube(self):\n",
     "        # Remove the existing .xyz file if it exists\n",
@@ -436,7 +437,7 @@
     "                float_values.append(np.nan)\n",
     "            processed_data.append(float_values)\n",
     "        return pd.DataFrame(processed_data)\n",
-    "\n",
+    "    \n",
     "    def process_cube_data(self,isovalue=0.003):\n",
     "\n",
     "        self.structure = [self.cube_data[2:][i] for i in range(4 + self.n_atoms)]\n",
@@ -447,7 +448,7 @@
     "        x_step, y_step, z_step = self.structure_df.iloc[1,0], self.structure_df.iloc[2,0], self.structure_df.iloc[3,0]\n",
     "        x_size, y_size, z_size = self.structure_df.iloc[1,1], self.structure_df.iloc[2,2], self.structure_df.iloc[3,3]\n",
     "\n",
-    "        bonds_df=extract_connectivity(self.xyz_df)\n",
+    "        self.bonds_df=extract_connectivity(self.xyz_df)\n",
     "        rows_per_block = int(np.ceil(z_step / 6)) + 1 # 12\n",
     "        target_length = int(np.ceil(cbrt(x_step * y_step * z_step)))-1 # 80\n",
     "        blocks = list(range(0, len(self.density_df) , rows_per_block-1))\n",
@@ -479,23 +480,34 @@
     "            z.append(z_coord)\n",
     "        coordinates_space_df=pd.DataFrame({'x':x,'y':y,'z':z})\n",
     "        df=self.xyz_df[['x','y','z']]/0.529177249\n",
-    "        xyz=pd.concat([df,coordinates_space_df]).reset_index(drop=True)\n",
-    "    \n",
-    "        base_atoms=np.array(direction_atoms_for_sterimol(bonds_df,self.base_atoms))-1\n",
+    "        self.xyz=pd.concat([df,coordinates_space_df]).reset_index(drop=True)\n",
+    "\n",
+    "    def get_sterimol(self):\n",
+    "\n",
+    "        if isinstance(self.base_atoms[0], list):\n",
+    "            sterimol_list=[]\n",
+    "            for base_atom in self.base_atoms:\n",
+    "                sterimol_list.append(self.calc_sterimol(base_atom))\n",
+    "            self.sterimol_df=pd.concat(sterimol_list)\n",
+    "        else:\n",
+    "            self.sterimol_df=self.calc_sterimol(self.base_atoms)\n",
+    "\n",
+    "    def calc_sterimol(self,base_atoms_indices):       \n",
+    "        base_atoms=np.array(direction_atoms_for_sterimol(self.bonds_df,base_atoms_indices))-1\n",
     "        tag=None\n",
     "        \n",
-    "        if count_0(xyz.iloc[:self.n_atoms, :3].sum()) >= 2:\n",
+    "        if count_0(self.xyz.iloc[:self.n_atoms, :3].sum()) >= 2:\n",
     "            \n",
-    "            col_1 = count_0(xyz.iloc[:, 0])\n",
-    "            col_2 = count_0(xyz.iloc[:, 1])\n",
-    "            col_3 = count_0(xyz.iloc[:, 2])\n",
+    "            col_1 = count_0(self.xyz.iloc[:, 0])\n",
+    "            col_2 = count_0(self.xyz.iloc[:, 1])\n",
+    "            col_3 = count_0(self.xyz.iloc[:, 2])\n",
     "            # Find the column with the maximum count of leading zeros\n",
     "            place_num = np.argmax([col_1, col_2, col_3]) + 1  # +1 because Python uses zero-based indexing\n",
     "            # Create a new row where the max place is 1 and others are 0\n",
-    "            new_row = pd.DataFrame([[0, 0, 0]], columns=xyz.columns)\n",
+    "            new_row = pd.DataFrame([[0, 0, 0]], columns=self.xyz.columns)\n",
     "            new_row.iloc[0, place_num - 1] = 1  # -1 to adjust for zero-based index\n",
     "            # Insert the new row at position n_atoms\n",
-    "            xyz = pd.concat([xyz.iloc[:self.n_atoms], new_row, xyz.iloc[self.n_atoms:]]).reset_index(drop=True)\n",
+    "            xyz = pd.concat([self.xyz.iloc[:self.n_atoms], new_row, self.xyz.iloc[self.n_atoms:]]).reset_index(drop=True)\n",
     "            # Suppose numeric_atoms is a list that holds some values where the 3rd element is to be updated\n",
     "            numeric_atoms = [None, None, None]  # Example initialization\n",
     "            numeric_atoms[2] = self.n_atoms + 1  # Update the third element\n",
@@ -521,7 +533,7 @@
     "        close_atoms=nan_atoms+close_atoms\n",
     "        ## add the close atoms to the transformed coordinates\n",
     "        transformed_coordinates=np.column_stack([transformed_coordinates,close_atoms])\n",
-    "        rlev=get_molecule_connections(bonds_df,self.base_atoms[0],self.base_atoms[1])\n",
+    "        rlev=get_molecule_connections(self.bonds_df,self.base_atoms[0],self.base_atoms[1])\n",
     "        filtered_indices = np.isin(transformed_coordinates[:, 3], rlev)\n",
     "        tcs = transformed_coordinates[filtered_indices, :3]\n",
     "        ## now make rest_tcs from the rest of the transformed coordinates\n",
@@ -564,27 +576,11 @@
     "        z_b1=df['z_b1'].iloc[df['b1'].idxmin()]\n",
     "        loc_b1=df['b1_loc'].iloc[df['b1'].idxmin()]\n",
     "        loc_b5=tcs[np.argmax(tcs[:,3]),1]*0.529177249\n",
-    "        sterimol_df=pd.DataFrame({'B1': B1, 'B5': B5, 'L': L,'loc_b5': loc_b5 ,'loc_b1': loc_b1}, index=[0])     \n",
+    "        sterimol_df=pd.DataFrame({'B1': f'{B1}_{self.base_atoms}', 'B5': f'{B5}_{self.base_atoms}', 'L': f'{L}_{self.base_atoms}','loc_b5': f'{self.loc_b5}_{base_atoms}' ,'loc_b1': f'{loc_b1}_{self.base_atoms}'}, index=[0])     \n",
     "               \n",
     "        return sterimol_df\n",
-    "            # b1s.append(np.unique(np.vstack(B1)).max())####check\n",
-    "            # b1s_loc.append(np.unique(np.vstack(B1_loc)).max())\n",
     "\n",
-    "            \n",
-    "\n",
-    "\n",
-    "        \n",
-    "        \n",
-    "\n",
-    "\n",
-    "        \n",
-    "\n",
-    "       \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "    \n",
-    "    "
+    "      "
    ]
   },
   {
