--- a/MolFeatures/Practical_Notebook_Modeling.ipynb
+++ b/MolFeatures/Practical_Notebook_Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "0173503a",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
     "    )\n",
     "    import plot\n",
     "except ModuleNotFoundError as e:\n",
-    "    print(f\"Module import failed: {e}\")\n",
+    "    print(f\"Module import failed: {e} \\nPlease ensure all required modules are installed and available in the path specified on the right hand corner of the notebook.\")\n",
     "\n",
     "# === Config ===\n",
     "pd.set_option('display.max_columns', None)\n",
@@ -61,8 +61,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c8132044",
+   "metadata": {},
+   "source": [
+    "In the next part, an example file from directory modeling_example is used, but you can pick any csv, just specify the correct path.\n",
+    "\n",
+    "**Note that you need to have an output column values in order to create a model, either add manually, or in target_csv_filepath enter the location of the output csv**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "1260685a",
    "metadata": {},
    "outputs": [
@@ -79,28 +89,26 @@
    ],
    "source": [
     "\n",
-    "try:\n",
-    "    modeling_example_dir = os.path.join(ROOT_DIR,'modeling_example')\n",
-    "    os.chdir(modeling_example_dir)\n",
-    "except:\n",
-    "    pass\n",
+    "modeling_example_dir = os.path.join(ROOT_DIR,'modeling_example')\n",
     "csv_path=os.path.join(modeling_example_dir, 'Linear_Dataset_Example.csv')\n",
     "csv_filepaths = {\n",
     "'features_csv_filepath': csv_path,\n",
     "'target_csv_filepath': ''\n",
     "}\n",
     "features_df=pd.read_csv(csv_path, index_col=0)\n",
-    "try:\n",
-    "    y=features_df['output']\n",
-    "except KeyError:\n",
-    "    add_output_column_csv(csv_path, 'output', [])\n",
-    "\n",
+    "y=features_df['output']\n",
     "samples_to_remove = pick_samples_to_remove_for_distribution(y, n_remove=3)\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2f1bffa8",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "34fdd52e",
    "metadata": {},
    "outputs": [
@@ -4036,8 +4044,8 @@
     }
    ],
    "source": [
-    "regression_model = LinearRegressionModel(csv_filepaths, process_method='one csv', output_name='output', leave_out=samples_to_remove, min_features_num=4, max_features_num=4, metrics=None, return_coefficients=False)\n",
-    "regression_model.search_models(top_n=5)"
+    "regression_model = LinearRegressionModel(csv_filepaths, process_method='one csv', output_name='output', leave_out=samples_to_remove, min_features_num=2, max_features_num=2, metrics=None, return_coefficients=False)\n",
+    "regression_model.search_models(top_n=5,initial_r2_threshold=0.9)"
    ]
   },
   {
