--- a/Getting started with examples/Practical_Notebook_Features.ipynb
+++ b/Getting started with examples/Practical_Notebook_Features.ipynb
@@ -31,7 +31,8 @@
     "\n",
     "# === Setup ===\n",
     "# Might need to change to main directory of MolFeatures - r'/your/path/to/MolFeatures'\n",
-    "ROOT_DIR = os.getcwd()\n",
+    "ROOT_DIR =   os.path.dirname(os.getcwd()) + '\\\\MolFeatures'\n",
+    "print(ROOT_DIR)\n",
     "sys.path.append(ROOT_DIR)\n",
     "sys.path.append(os.path.join(ROOT_DIR, 'M3_modeler'))\n",
     "sys.path.append(os.path.join(ROOT_DIR, 'M2_data_extractor'))\n",
@@ -63,6 +64,7 @@
     "    \n",
     "except ModuleNotFoundError as e:\n",
     "    print(f\"Module import failed: {e} \\nPlease ensure all required modules are installed and available in the path specified on the right hand corner of the notebook.\")\n",
+    "    print(f'ROOT_DIR: {ROOT_DIR} - should be in MolFeatures')\n",
     "\n",
     "# === Config ===\n",
     "pd.set_option('display.max_columns', None)\n",
