--- a/Getting started with examples/Practical_Notebook_Modeling.ipynb
+++ b/Getting started with examples/Practical_Notebook_Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "0173503a",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
     "\n",
     "# === Setup ===\n",
     "# Might need to change to main directory of MolFeatures\n",
-    "ROOT_DIR = os.getcwd()\n",
+    "ROOT_DIR =   os.path.dirname(os.getcwd()) + '\\\\MolFeatures'\n",
     "print(ROOT_DIR)\n",
     "sys.path.append(ROOT_DIR)\n",
     "sys.path.append(os.path.join(ROOT_DIR, 'M3_modeler'))\n",
